--- a/core/local/.env
+++ b/core/local/.env
@@ -1,3 +1,6 @@
-GLPI_API_URL="https://raccoon.npss.loc/helpdesk/apirest.php"
-GLPI_API_APP_TOKEN="ayn83esajCpe0ii31l7gcETlgTEHGoGpwdrPSPJl"
-GLPI_API_USER_TOKEN="Jnn8ZslaVYDS0HIcCmko6uNpWwa2UCHmAy4jJsA1"
+GLPI_API_URL_PROD="https://raccoon.npss.loc/helpdesk/apirest.php"
+GLPI_API_URL_TEST="https://raccoon.npss.loc/helpdesk/apirest.php"
+GLPI_API_APP_TOKEN_PROD="ayn83esajCpe0ii31l7gcETlgTEHGoGpwdrPSPJl"
+GLPI_API_APP_TOKEN_TEST="ayn83esajCpe0ii31l7gcETlgTEHGoGpwdrPSPJl"
+GLPI_API_USER_TOKEN_PROD="Jnn8ZslaVYDS0HIcCmko6uNpWwa2UCHmAy4jJsA1"
+GLPI_API_USER_TOKEN_TEST="Jnn8ZslaVYDS0HIcCmko6uNpWwa2UCHmAy4jJsA1"
